# web-scraping-scrapy

./: README.md  pyproject.toml
scrapytutorial/: scrapy.cfg
scrapytutorial/scrapytutorial/: items.py  middlewares.py  pipelines.py  settings.py
scrapytutorial/scrapytutorial/spiders/: films.json  films.xlsx  filmscraper.py
