[project]
name = "scrapy-tuto"
version = "0.1.0"
description = ""
authors = [
    {name = "Anastasiia Savelkova",email = "anastasiiasavelkova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.13.4,<3.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
mypy = "^1.18.2"

